calico-policies/private-network-isolation/ca-tor/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

# NOTE: The policies in the ca-tor directory are meant for use with the Toronto multizone location.
# For the Toronto single zone location, use the policies in the us-east directory instead.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ca-tor: tor01, tor04, tor05
      - 166.9.76.3/32
      - 166.9.76.4/32
      - 166.9.76.5/32
      - 166.9.76.6/32
      - 166.9.76.7/32
      - 166.9.76.8/32
      - 166.9.77.3/32
      - 166.9.77.4/32
      - 166.9.77.5/32
      - 166.9.77.6/32
      - 166.9.77.7/32
      - 166.9.77.8/32
      - 166.9.78.3/32
      - 166.9.78.4/32
      - 166.9.78.5/32
      - 166.9.78.6/32
      - 166.9.78.7/32
      - 166.9.78.8/32
      - 166.9.247.139/32
      - 166.9.247.172/32
      - 166.9.247.209/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ca-tor: tor01, tor04, tor05
      - 166.9.76.3/32
      - 166.9.76.4/32
      - 166.9.76.5/32
      - 166.9.76.6/32
      - 166.9.76.7/32
      - 166.9.76.8/32
      - 166.9.77.3/32
      - 166.9.77.4/32
      - 166.9.77.5/32
      - 166.9.77.6/32
      - 166.9.77.7/32
      - 166.9.77.8/32
      - 166.9.78.3/32
      - 166.9.78.4/32
      - 166.9.78.5/32
      - 166.9.78.6/32
      - 166.9.78.7/32
      - 166.9.78.8/32
      - 166.9.247.139/32
      - 166.9.247.172/32
      - 166.9.247.209/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
