calico-policies/private-network-isolation/ca-tor/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: US South, Toronto subnets
      - 166.9.250.214/32
      - 166.9.250.246/32
      - 166.9.251.21/32
      - 166.9.247.143/32
      - 166.9.247.170/32
      - 166.9.247.207/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: ca-tor
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.76.23/32
      - 166.9.77.20/32
      - 166.9.78.21/32
      - 166.9.209.13/32
      - 166.9.209.42/32
      - 166.9.209.72/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: ca-tor
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.247.153/32
      - 166.9.247.185/32
      - 166.9.247.205/32
      - 166.9.209.13/32
      - 166.9.209.42/32
      - 166.9.209.72/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: ca-tor
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.76.26/32
      - 166.9.76.29/32
      - 166.9.77.23/32
      - 166.9.77.26/32
      - 166.9.78.24/32
      # New IP addresses added on 1/19/2023
      - 166.9.78.10/32 
      - 166.9.76.10/32 
      - 166.9.77.10/32
      # New IP addresses added on 10/19/2023
      - 166.9.247.151/32
      - 166.9.247.182/32
      - 166.9.247.201/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US East nets
      - 166.9.20.76/32
      - 166.9.22.38/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US East nets
      - 166.9.20.77/32
      - 166.9.22.39/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
