calico-policies/private-network-isolation/ca-tor/allow-sys-mgmt-private.yaml
# This policy allows connections for specific IBM Cloud infrastructure
# (SoftLayer) systems that are used to manage the worker nodes.
# Note that you must include the nets for dal01, dal10, and wdc04.

# NOTE: The policies in the ca-tor directory are meant for use with the Toronto multizone location.
# For the Toronto single zone location, use the policies in the us-east directory instead.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for Toronto zones
      - 10.2.48.0/20 # tor01
      - 10.202.176.0/20 # tor04
      - 10.202.192.0/20 # tor05
    source: {}
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for Toronto zones
      - 10.2.48.0/20 # tor01
      - 10.202.176.0/20 # tor04
      - 10.202.192.0/20 # tor05
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
